# rustffi

./: CMakeLists.txt  README.md
inc/safe/: safe.h
lib/: CMakeLists.txt
lib/libsafe/: CMakeLists.txt  Cargo.toml
lib/libsafe/src/: lib.rs
src/: CMakeLists.txt  main-user.cc
